--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "next": "15.1.7",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.284"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
